# vegvisir

./: .gitignore  Cargo.toml  LICENSE  README.md  build_and_flash.sh
.cargo/: config.toml
hardware/controller/: controller.kicad_pcb  controller.kicad_pro  controller.kicad_sch
vegvisir-controller/: Cargo.toml  README.md
vegvisir-controller/src/: main.rs
vegvisir-controller/src/drivers/: error.rs  gps.rs  mod.rs
vegvisir-controller/src/phy/: mod.rs  uart.rs
vegvisir-crypto/: Cargo.toml  README.md
vegvisir-crypto/src/: lib.rs
vegvisir-gcs/: Cargo.toml
vegvisir-gcs-server/: Cargo.toml
vegvisir-gcs-server/src/: main.rs
vegvisir-gcs/src/: main.rs
vegvisir-gcs/src/ui/: app.rs  mod.rs
vegvisir-gcs/src/ui/dialogs/: connect_vehicle.rs  mod.rs
vegvisir-gcs/src/ui/widgets/: mod.rs  modal.rs  status.rs
vegvisir-mcu/: Cargo.toml
vegvisir-mcu/src/: main.rs
vegvisir-protocol/: Cargo.toml  README.md
vegvisir-protocol/src/: error.rs  lib.rs  message.rs  packet.rs
vegvisir-transport/: Cargo.toml  README.md
vegvisir-transport/examples/: server.rs
vegvisir-transport/src/: lib.rs
vegvisir-transport/src/tcp/: client.rs  mod.rs  server.rs
