cargo-features = ["per-package-target"]
[package]
edition = "2024"
name = "vegvisir-controller"
version = "0.1.0"
license = "MIT"
forced-target = "thumbv7em-none-eabi"

[dependencies]
embassy-stm32 = { version = "0.5.0", features = ["defmt", "stm32f401re", "unstable-pac", "memory-x", "time-driver-tim4", "exti", "chrono"] }
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
nmea = { version = "0.7", default-features = false, features = ["all-sentences", "defmt-03"] }
defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m-rt = "0.7.0"
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
embedded-io-async = { version = "0.7.0" }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
heapless = { version = "0.9", default-features = false }

[package.metadata.embassy]
build = [
  { target = "thumbv7em-none-eabi" }
]

[[bin]]
name = "vegvisir-controller"
path = "src/main.rs"
test = false
doctest = false
bench = false
