[package]
name = "vegvisir-crypto"
version = "0.1.0"
edition = "2024"

[dependencies]
snow = { version = "0.10.0", default-features = false, features = ["default-resolver-crypto"] }
vegvisir-transport = { path = "../vegvisir-transport" }

[dev-dependencies]
tokio = { version = "1.50.0", features = ["full"] }