[package]
name = "vegvisir-gcs"
version = "0.1.0"
edition = "2024"
license = "MIT"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
egui = "0.34.1"
eframe = { version = "0.34.1", features = ["persistence"] }
egui_tracing = "0.3.0"

tracing-core = "0.1.36"
tracing-subscriber = "0.3.23"
log = "0.4.27"

serde = { version = "1.0.219", features = ["derive"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"
