[package]
name = "vegvisir-protocol"
version = "0.1.0"
edition = "2024"

[lib]
test = true
doctest = false
bench = false

[dependencies]
serde = { version = "1.0.228", default-features = false }
postcard = { version = "1.1.3", features = ["crc", "use-crc"] }
crc = "3.4.0"
heapless = "0.9.2"
defmt = "1.0.1"