[package]
name = "vegvisir-transport"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Transport implementations for `vegvisir` USV project"
repository = "https://github.com/w1ltshire/vegvisir"

[dependencies]
tokio = { version = "1.50.0", optional = true, features = ["full"] }

[features]
tcp = ["dep:tokio"]

[dev-dependencies]
tokio = { version = "1.50.0", features = ["full"] }